#Change Log
All notable changes to this project starting with the 0.6.0 release will be documented in this file. This project adheres to [Semantic Versioning](http://semver.org)

## [Unreleased][unreleased]
### Changed
- `site owner` now just returns the owner id. The --set flag has been removed. Setting is now done by `site set-owner`. (#469)

###Added
- `site set owner --site=<site> --set=<owner>` sets the site owner to the given user id.

##[0.8.0] - 2015-09-15
###Added
- Environment variable TERMINUS_LOG_DIR will save all logs to file in the given directory. (#487)

###Fixed
- Undefined property "framework" error when running SitesCache functions (#433)
- Split Terminus logger between KLogger and Outputter, fixed JSON and bash outputs

##[0.7.1] - 2015-08-21
###Fixed
- PHP 5.3 incompatibility

##[0.7.0] - 2015-08-20
### Added
- `site delete` command will delete a site (moved from `sites delete`, which has been deprecated) (#370)
- `organizations sites --tag=<name>` filters list of sites by tag
- `site team change-role` Changes an existing member's role (For sites with the proper access level) (#388)
- `site team add-member` now has a required --role flag (For sites with the proper access level) (#388)
- `site delete-branch` will delete a multidev environment's branch (For sites with multidev access) (#395)
- `site delete-env` now has an optional --remove-branch flag (#395)
- Environment variables for --site (TERMINUS_SITE), --org (TERMINUS_ORG), --env (TERMINUS_ENV), and user (TERMINUS_USER). User may import these themselves, or add them to the .env file in the user's current directory. (#407)
- `site tags <add|remove> --site=<site> --org=<org> --tag=<tag>` command will add tags to an organization site (#417)
- `site workflows` commmand will show all workflows run on the site and their statuses (replaces `site jobs` and `site notifications`) (#412)

### Fixed
- `organizations sites` shows all the organization's sites, not just the first 100 (#371)

### Changed